Changes made to this commit modified:   public/index.html 	Removed css link, import it in index.js instead. modified:   src/App.js 	Increading loading animation size. Wrapped heading and 	sub-heading in a container to control its size, preventing it 	from pushing other elements. modified:   src/components/HeroCard.js 	Removed shadow effect on hover for dimmed card. modified:   src/components/HeroDetail.js 	Addded loading animation and notfound animation. new file:   src/components/NotFound.js 	This component is rendered on notfound route. modified:   src/index.js 	Added a path to handle notfound route. new file:   src/notfound.json 	Notfound animation from lottie. renamed:    public/style.css -> src/style.css 	Changed file location.

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Montserrat', sans-serif;
   color: gainsboro;
   padding-top: .25rem;
+  overflow-x: hidden;
 }
 
 .hero-card {
@@ -96,4 +97,20 @@ body {
 
 option, select {
   font-family: 'Montserrat', sans-serif;
+}
+
+@media (max-width: 600px) {
+  .filter {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .filter select {
+    margin: 0 0 .5rem 0;
+    width: 100%;
+  }
+
+  .heading-container {
+    height: 7rem;
+  }
 }
